--- a/files/htdocs/tinycombo.css
+++ b/files/htdocs/tinycombo.css
@@ -1074,10 +1074,10 @@ text-align:left;
 /* error 1 - check for ui color fail */
 .alerts, .errorbox {
   background: #FFFFFF url(warning_icon.png) no-repeat left center;
+  background-size: 40px 40px;
   color: #000000;
   font-weight: bold;
-  padding: 3px;
-  padding-left: 10px;
+  padding: 3em;
   position: relative;
   max-width: 100%;
   border-color: #C43C35;
